--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: docker build -t my-servlet-app .
-
-      - name: Push Docker image to Docker Hub
-        run: docker push my-servlet-app
-
       - name: Deploy to Elastic Beanstalk
         uses: aws-actions/configure-elastic-beanstalk@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          region: your-region
+          region: us-east-1
 
       - name: Deploy application to Elastic Beanstalk
-        run: eb deploy your-environment-name
+        run: eb deploy Myapp-env
